staff: fix overflows

--- a/services/staff/src/client/pages/Chats/Chats.css
+++ b/services/staff/src/client/pages/Chats/Chats.css
@@ -11,6 +11,7 @@
 .chatsNames {
     flex: 0 0 auto;
     width: 300px;
+    overflow: auto;
 }
 
 .divider {
